k8s/manifests/2048_manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: games
  name: deployment-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - name: app-2048
        image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"      # 0.05 vCPU
            memory: "64Mi"  # 64 MiB
          limits:
            cpu: "100m"     # 0.1 vCPU
            memory: "128Mi" # 128 MiB
---
apiVersion: v1
kind: Service
metadata:
  namespace: games
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
---
