k8s/manifests/tetris_manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: games
  name: deployment-tetris
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-tetris
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-tetris
    spec:
      containers:
      - image: docker.io/lrakai/tetris:latest
        imagePullPolicy: Always
        name: app-tetris
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: games
  name: service-tetris
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-tetris
